[tool.poetry]
name = "site-analysis"
version = "0.1.0"
description = ""
authors = ["David Strauss <david@davidstrauss.net>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.30.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
